--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="Tic Toc Toe" />
+    <link rel="apple-touch-icon" sizes="180x180" href="icons/icon-180.png" />
+    <link rel="shortcut icon" href="icons/icon-192.png" type="image/png" />
+    <link rel="manifest" href="manifest.json" />
     <title>Tic Tac Toe</title>
     <style>
       body {
@@ -19,6 +25,12 @@
         justify-content: center;
       }
     </style>
+    <script>
+      // Register the service worker
+      if ("serviceWorker" in navigator) {
+        navigator.serviceWorker.register("service-worker.js");
+      }
+    </script>
   </head>
   <body>
     <script>
